force-app/main/default/objects/Irrigation_Alert__e/Irrigation_Alert__e.object-meta.xml
<CustomObject>
    <label>Irrigation Alert</label>
    <pluralLabel>Irrigation Alerts</pluralLabel>
</CustomObject>