force-app/main/default/objects/Irrigation_Alert__e/fields/Alert_Text__c.field-meta.xml
<CustomField>
    <fullName>Alert_Text__c</fullName>
    <label>Alert Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>