force-app/main/default/objects/Irrigation_Alert__e/fields/Exceeds_Acceptable_Overrides__c.field-meta.xml
<CustomField>
    <fullName>Exceeds_Acceptable_Overrides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exceeds Acceptable Overrides</label>
    <type>Checkbox</type>
</CustomField>