force-app/main/default/objects/Irrigation_Alert__e/fields/Field_Id__c.field-meta.xml
<CustomField>
    <fullName>Field_Id__c</fullName>
    <label>Field Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>